Added history reports feature (1)
